--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h1 class="intro-title">
             Welcome to <span class="logoname-f">Medical</span><span class="logoname-s">Life</span>
           </h1>
-          <h2 class="intro-subtitle">Please Log in</h2>
+          <h2 class="intro-subtitle">Pleace Log in</h2>
         </div>
       </div>
     </section>
@@ -77,9 +77,10 @@
               id="exampleDataList" placeholder="Type to search...">
           </div>
         </form>
-        <ul class="list-card ">
-        </ul>
+
       </div>
+      <ul class="list-card ">
+      </ul>
     </section>
   </main>
   <script type="module" src="./script/index.js"></script>
